--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Django==1.9
-psycopg2==2.6.1
-requests==2.9.1
+appdirs==1.4.3
+Django==1.11.1
+packaging==16.8
+psycopg2==2.7.1
+pyparsing==2.2.0
+pytz==2017.2
+requests==2.14.1
+six==1.10.0
