adding json files for testing

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ safe_eats_venv/
 .DS_Store
 safe_eats_project/.DS_Store
 
-restaurants.json
-inspection_reports.json
-inspection_results.json
+#restaurants.json
+#inspection_reports.json
+#inspection_results.json
