--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 appdirs==1.4.3
-Django==1.11.1
+Django==1.9
 packaging==16.8
 psycopg2==2.7.1
 pyparsing==2.2.0
 pytz==2017.2
 requests==2.14.1
 six==1.10.0
+gunicorn==19.6.0
